--- a/.editorconfig
+++ b/.editorconfig
@@ -10,6 +10,11 @@ insert_final_newline = true
 trim_trailing_whitespace = true
 
 # noinspection EditorConfigKeyCorrectness
+[{nuget.config,*.xml}]
+end_tag_newline = true
+self_closing_tag_style = space
+
+# noinspection EditorConfigKeyCorrectness
 [*.fs]
 indent_size = 4
 fsharp_multiline_block_brackets_on_same_column = true
