--- a/.editorconfig
+++ b/.editorconfig
@@ -10,7 +10,7 @@ insert_final_newline = true
 trim_trailing_whitespace = true
 
 # noinspection EditorConfigKeyCorrectness
-[{nuget.config,*.xml}]
+[{nuget.config,*.*proj,*.props,*.xml}]
 end_tag_newline = true
 self_closing_tag_style = space
 
