--- a/src/Flinter/Flinter.fsproj
+++ b/src/Flinter/Flinter.fsproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <PackageReference Update="FSharp.Core" Version="7.0.0" />
+    <PackageReference Include="FSharp.Compiler.Service" Version="42.7.101" />
   </ItemGroup>
 
 </Project>
