--- a/src/Flinter/Flinter.fsproj
+++ b/src/Flinter/Flinter.fsproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="UntypedAst.fs" />
     <Compile Include="Library.fs" />
   </ItemGroup>
 
