--- a/src/Flinter/Flinter.fsproj
+++ b/src/Flinter/Flinter.fsproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <PackageReference Update="FSharp.Core" Version="6.0.1" />
+    <PackageReference Include="FSharp.Analyzers.SDK" Version="0.11.0" />
     <PackageReference Include="FSharp.Compiler.Service" Version="41.0.1" />
   </ItemGroup>
 
