--- a/src/Flinter.Tests/Flinter.Tests.fsproj
+++ b/src/Flinter.Tests/Flinter.Tests.fsproj
@@ -1,23 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <GenerateProgramFile>false</GenerateProgramFile>
-  </PropertyGroup>
-
   <ItemGroup>
     <Compile Include="Tests.fs" />
-    <Compile Include="Program.fs" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Expecto" Version="9.0.4" />
     <PackageReference Include="Hedgehog" Version="0.13.0" />
     <PackageReference Include="Hedgehog.Experimental" Version="0.7.0" />
+    <PackageReference Include="Meziantou.Xunit.ParallelTestFramework" Version="2.1.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.4.0" />
     <PackageReference Include="Unquote" Version="6.1.0" />
-    <PackageReference Include="YoloDev.Expecto.TestSdk" Version="0.13.3" />
     <PackageReference Update="FSharp.Core" Version="6.0.1" />
+    <PackageReference Include="xunit.core" Version="2.4.2" />
   </ItemGroup>
 
   <ItemGroup>
