Add POC test rule

--- a/src/Flinter/Flinter.fsproj
+++ b/src/Flinter/Flinter.fsproj
@@ -9,6 +9,8 @@
 
   <ItemGroup>
     <Compile Include="UntypedAst.fs" />
+    <Compile Include="Analyzers\Helpers.fs" />
+    <Compile Include="Analyzers\FLN*\**\*.fs" />
     <Compile Include="Library.fs" />
   </ItemGroup>
 
