Add test analyzer bootstrap

--- a/src/Flinter.Tests/Flinter.Tests.fsproj
+++ b/src/Flinter.Tests/Flinter.Tests.fsproj
@@ -2,6 +2,7 @@
 
   <ItemGroup>
     <Compile Include="Utils.fs" />
+    <Compile Include="AnalyzerBootstrap.fs" />
     <Compile Include="Tests.fs" />
   </ItemGroup>
 
