Add test assertion helpers

--- a/src/Flinter.Tests/Flinter.Tests.fsproj
+++ b/src/Flinter.Tests/Flinter.Tests.fsproj
@@ -3,6 +3,7 @@
   <ItemGroup>
     <Compile Include="Utils.fs" />
     <Compile Include="AnalyzerBootstrap.fs" />
+    <Compile Include="Assertions.fs" />
     <Compile Include="Tests.fs" />
   </ItemGroup>
 
