Add internal consistency tests

--- a/src/Flinter.Tests/Flinter.Tests.fsproj
+++ b/src/Flinter.Tests/Flinter.Tests.fsproj
@@ -4,6 +4,7 @@
     <Compile Include="Utils.fs" />
     <Compile Include="AnalyzerBootstrap.fs" />
     <Compile Include="Assertions.fs" />
+    <Compile Include="ConsistencyTests.fs" />
     <Compile Include="Analyzers\FLN*\**\*.fs" />
     <Compile Include="Tests.fs" />
   </ItemGroup>
