Add NuGet push step to CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,3 +34,9 @@ jobs:
 
       - name: Test
         run: dotnet test -c Release --no-build
+
+      - name: Push
+        if: startsWith(github.ref, 'v/')
+        env:
+          NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
+        run: dotnet nuget push "**/*.nupkg" -k "$NUGET_API_KEY" --skip-duplicate
