--- a/src/Flinter/Flinter.fsproj
+++ b/src/Flinter/Flinter.fsproj
@@ -6,6 +6,7 @@
     <Version>0.1.0</Version>
     <Authors>Christer van der Meeren</Authors>
     <Description>A linter for F#.</Description>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
 
   <ItemGroup>
