--- a/src/Flinter/Flinter.fsproj
+++ b/src/Flinter/Flinter.fsproj
@@ -7,6 +7,7 @@
     <Authors>Christer van der Meeren</Authors>
     <Description>A linter for F#.</Description>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageTags>F# analyzers compiler tooling editor lint linter</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
