--- a/src/Flinter/Flinter.fsproj
+++ b/src/Flinter/Flinter.fsproj
@@ -8,10 +8,12 @@
     <Description>A linter for F#.</Description>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageTags>F# analyzers compiler tooling editor lint linter</PackageTags>
+    <PackageIcon>flinter-logo-128x128.png</PackageIcon>
     <PackageReleaseNotes>https://github.com/cmeeren/Flinter/blob/master/RELEASE_NOTES.md</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="flinter-logo-128x128.png" Pack="True" PackagePath="" />
     <Compile Include="UntypedAst.fs" />
     <Compile Include="Analyzers\Helpers.fs" />
     <Compile Include="Analyzers\FLN*\**\*.fs" />
