--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,4 +32,4 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/v/')
         env:
           NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
-        run: dotnet nuget push "**/*.nupkg" -k "$NUGET_API_KEY" --skip-duplicate
+        run: dotnet nuget push "**/*.nupkg" -src "https://api.nuget.org/v3/index.json" -k "$NUGET_API_KEY" --skip-duplicate
