--- a/.editorconfig
+++ b/.editorconfig
@@ -17,5 +17,5 @@ self_closing_tag_style = space
 # noinspection EditorConfigKeyCorrectness
 [*.fs]
 indent_size = 4
-fsharp_multiline_bracket_style = experimental_stroustrup
+fsharp_multiline_bracket_style = stroustrup
 fsharp_keep_max_number_of_blank_lines = 3
