--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
         run: dotnet tool restore
 
       - name: Check code format
-        run: dotnet fantomas --check --recurse .
+        run: dotnet fantomas --check .
 
       - name: Restore dependencies
         run: dotnet restore --locked-mode
