--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,6 +2,9 @@ name: CI
 
 on: [ push, pull_request ]
 
+permissions:
+  id-token: write
+
 jobs:
   ci:
 
@@ -28,8 +31,14 @@ jobs:
       - name: Test
         run: dotnet test -c Release --no-build
 
+      - name: NuGet login
+        uses: NuGet/login@v1
+        id: nuget_login
+        with:
+          user: ${{ secrets.NUGET_USER }}
+
       - name: Push
         if: startsWith(github.ref, 'refs/tags/v/')
         env:
           NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
-        run: dotnet nuget push "**/*.nupkg" -s "https://api.nuget.org/v3/index.json" -k "$NUGET_API_KEY" --skip-duplicate
+        run: dotnet nuget push "**/*.nupkg" -s "https://api.nuget.org/v3/index.json" -k ${{ steps.nuget_login.outputs.NUGET_API_KEY }} --skip-duplicate
